force-app/main/default/objects/Xpedeon_Customer_Master__c/Xpedeon_Customer_Master__c.object-meta.xml
<CustomObject>
    <label>Xpedeon Customer Master</label>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>Xpedeon Customer Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Xpedeon Customer Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>