force-app/main/default/objects/Xpedeon_Customer_Master__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Xpedeon Customer Masters</relationshipLabel>
    <relationshipName>Xpedeon_Customer_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>