force-app/main/default/objects/Xpedeon_Customer_Master__c/fields/Applicant_Details__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Details</label>
    <referenceTo>Applicant_Details__c</referenceTo>
    <relationshipLabel>Xpedeon Customer Masters</relationshipLabel>
    <relationshipName>Xpedeon_Customer_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>