force-app/main/default/objects/Xpedeon_Customer_Master__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Xpedeon Customer Masters</relationshipLabel>
    <relationshipName>Xpedeon_Customer_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>