force-app/main/default/objects/Xpedeon_Customer_Master__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Xpedeon Customer Masters</relationshipLabel>
    <relationshipName>Xpedeon_Customer_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>