force-app/main/default/objects/Xpedeon_Customer_Master__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Xpedeon Customer Masters</relationshipLabel>
    <relationshipName>Xpedeon_Customer_Masters</relationshipName>
    <type>Lookup</type>
</CustomField>