force-app/main/default/objects/Xpedeon_Customer_Master__c/fields/Xpedeon_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Xpedeon_Customer_Code__c</fullName>
    <label>Xpedeon Customer Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>