force-app/main/default/objects/Xpedeon_Customer_Master__c/fields/Xpedeon_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Xpedeon_Customer_Name__c</fullName>
    <label>Xpedeon Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>